# php-refactor

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  justfile
.claude/: settings.json
.claude/rules/: architecture.md  php-ast-patterns.md  rule-contract.md  testing-patterns.md
.claude/skills/add-new-rule/: SKILL.md
.claude/skills/code-quality-issues/: SKILL.md
.claude/skills/project-glossary/: SKILL.md
.github/workflows/: quality.yml
docs/: rules.md
scripts/: rename-binary.sh
src/: config.rs  lib.rs  main.rs  reporter.rs  resolver.rs
src/rules/: mod.rs
src/rules/quality/: add_final_keyword.rs  add_readonly_keyword.rs  mod.rs  remove_redundant_readonly_keyword.rs
tests/: config_test.rs  integration_test.rs  reporter_tests.rs  resolver_test.rs  rules_test.rs
tests/fixtures/config/: extra_whitespace.toml  invalid_syntax.toml  missing_paths_field.toml  missing_source_section.toml  special_characters.toml  valid_absolute_paths.toml  valid_empty_paths.toml  valid_multiple_paths.toml  valid_single_path.toml
tests/fixtures/resolver/: single.txt
tests/fixtures/resolver/config/: config.toml
tests/fixtures/resolver/dir_with_php/: b.php  c.txt
tests/fixtures/resolver/nested/: root.php
tests/rules/quality/add_final_keyword/: add_final_keyword.php.inc  add_final_keyword_in_namespace.php.inc  add_final_keyword_on_readonly_class.php.inc  skip_abstract_class.php.inc  skip_class_with_final_keyword.php.inc  skip_trait.php.inc
tests/rules/quality/add_readonly_keyword/: add_readonly_keyword.php.inc  skip_enum.php.inc  (+3 more)
(+14 files in other folders)
