[package]
name = "php-refactor"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "php-refactor"
path = "src/main.rs"

[lib]
name = "php_refactor"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
glob = "0.3"
rayon = "1"
regex = "1"
ignore = "0.4"
globset = "0.4"
